feat: load balancer

--- a/helm/charts/kafka/templates/cluster.yaml
+++ b/helm/charts/kafka/templates/cluster.yaml
@@ -51,6 +51,10 @@ spec:
         tls: true
         configuration:
           useServiceDnsDomain: true
+      - name: external
+        port: 10092
+        type: loadbalancer
+        tls: false
     config:
       default.replication.factor: {{ .Values.primary.replicas }}
       offsets.topic.replication.factor: {{ .Values.primary.replicas }}
