--- a/helm/charts/kafka/templates/schema.yaml
+++ b/helm/charts/kafka/templates/schema.yaml
@@ -51,8 +51,7 @@ metadata:
   labels:
     app: schema-registry
 spec:
-  type: ClusterIP
-  clusterIP: None  # headless
+  type: LoadBalancer
   selector:
     app: schema-registry
   ports:
